Started create chat button implementation
